fix: table overflow

--- a/app/assets/stylesheets/_badges.scss
+++ b/app/assets/stylesheets/_badges.scss
@@ -13,7 +13,7 @@
   font-family: $font-family-sans-serif;
 }
 
-div:has(.badge) {
+div:has(.badge):not(.table-responsive) {
   overflow: hidden;
 }
 
